Remove emoji from peak usage analysis titles

--- a/notebooks/03_advanced_analysis.ipynb
+++ b/notebooks/03_advanced_analysis.ipynb
@@ -525,7 +525,7 @@
         "\n",
         "plt.figure(figsize=(16, 6))\n",
         "plt.plot(hourly_usage, linewidth=0.8, color='darkblue', alpha=0.7)\n",
-        "plt.title('⚡ Hourly Electricity Consumption Pattern', fontsize=18, fontweight='bold')\n",
+        "plt.title(' Hourly Electricity Consumption Pattern', fontsize=18, fontweight='bold')\n",
         "plt.xlabel('Time', fontsize=13)\n",
         "plt.ylabel('Power (kW)', fontsize=13)\n",
         "plt.grid(True, alpha=0.3)\n",
@@ -584,7 +584,7 @@
         "bars[peak_hour].set_color('red')\n",
         "bars[lowest_hour].set_color('green')\n",
         "\n",
-        "plt.title('⚡ PEAK USAGE ANALYSIS: Average Electricity Consumption by Hour of Day',\n",
+        "plt.title(' PEAK USAGE ANALYSIS: Average Electricity Consumption by Hour of Day',\n",
         "          fontsize=16, fontweight='bold')\n",
         "plt.xlabel('Hour of Day (0-23)', fontsize=13)\n",
         "plt.ylabel('Average Power (kW)', fontsize=13)\n",
@@ -602,7 +602,7 @@
         "plt.show()\n",
         "\n",
         "print(\" Graph 2 saved: peak_hours_analysis.png\")\n",
-        "print(\"\\n🔥 PEAK USAGE INSIGHTS:\")\n",
+        "print(\"\\n PEAK USAGE INSIGHTS:\")\n",
         "print(\"=\"*80)\n",
         "print(f\" PEAK HOUR: {peak_hour}:00 (Average: {peak_value:.3f} kW)\")\n",
         "print(f\" LOWEST HOUR: {lowest_hour}:00 (Average: {lowest_value:.3f} kW)\")\n",
@@ -635,7 +635,7 @@
           "text": [
             " Graph 2 saved: peak_hours_analysis.png\n",
             "\n",
-            "🔥 PEAK USAGE INSIGHTS:\n",
+            " PEAK USAGE INSIGHTS:\n",
             "================================================================================\n",
             " PEAK HOUR: 20:00 (Average: 1.899 kW)\n",
             " LOWEST HOUR: 4:00 (Average: 0.444 kW)\n",
